[package]
name = "w3grs"
version = "0.1.0"
authors = ["anxietypb <anxiety.pb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytebuffer-rs = "0.3.1"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
